--- a/miniprogram/pages/userCustom/userCustom.wxml
+++ b/miniprogram/pages/userCustom/userCustom.wxml
@@ -1,12 +1,11 @@
-<text>用户旅游线路定制中心</text>
 <view class="custom-body">
   <view class="custom-title">私人定制</view>
   <view class="custom-items">
     <!-- 用户提交的表单 -->
-    <form action="">
+    <form catchsubmit="formSubmit">
       <view class="page-section-title">旅行人数：</view>
       <radio-group name="travelNum">
-        <label><radio value="1" />1人</label>
+        <label><radio value="1" checked="true" />1人</label>
         <label><radio value="2" />2人</label>
         <label><radio value="3" />3人</label>
         <view></view>
@@ -18,18 +17,28 @@
         <label><radio value="8" />8人</label>
         <label><radio value="9" />9人</label>
       </radio-group>
+      <view class="page-section-title">中意景点：</view>
+      <checkbox-group name="attractions">
+        <label><checkbox value="1" checked="true" />清明上河园</label>
+        <label><checkbox value="2" />龙亭公园</label>
+        <label><checkbox value="3" />包公祠</label>
+        <label><checkbox value="4" />大相国寺</label>
+        <label><checkbox value="5" />万岁山·大宋武侠城</label>
+        <label><checkbox value="6" />铁塔公园</label>
+      </checkbox-group>
       <view class="page-section-title">旅行方式：</view>
       <radio-group name="travelMethod">
         <label><radio value="1" />徒步</label>
         <label><radio value="2" />骑行</label>
+        <view></view>
         <label><radio value="3" />自驾</label>
-        <label><radio value="4" />公交</label>
+        <label><radio value="4" checked="true" />公交</label>
       </radio-group>
       <view class="page-section-title">游玩天数：</view>
       <radio-group name="travelMethod">
         <label><radio value="0" />半天</label>
         <label><radio value="1" />一天</label>
-        <label><radio value="2" />两天</label>
+        <label><radio value="2" checked="true" />两天</label>
         <view></view>
         <label><radio value="3" />三天</label>
         <label><radio value="4" />四天</label>
@@ -40,8 +49,13 @@
       </radio-group>
       <view class="page-section-title">旅行预算：</view>
       <view class="user-input-box">
-        <input type="number" name="travalAccount" class="user-input" />元
+        <input type="number" name="travalAccount" class="user-input" value="0" />元
+      </view>
+      <view class="submmit-box">
+        <button type="primary" form-type="submit">提交</button>
+        <button type="default" form-type="reset">清空</button>
       </view>
     </form>
   </view>
+  <view class="custom-tail"></view>
 </view>
