--- a/miniprogram/pages/userCustom/userCustom.wxss
+++ b/miniprogram/pages/userCustom/userCustom.wxss
@@ -55,3 +55,16 @@ button {
   margin-top: 20rpx;
   margin-bottom: 20rpx;
 }
+
+.travel-number-box {
+  display: flex;
+  margin-top: 20rpx;
+  margin-bottom: 20rpx;
+}
+
+.travel-number-input {
+  width: 50%;
+  border: 1px solid grey;
+  border-radius: 20rpx;
+  padding-left: 15rpx;
+}
