--- a/miniprogram/components/timeAxis/timeAxis.wxml
+++ b/miniprogram/components/timeAxis/timeAxis.wxml
@@ -14,6 +14,7 @@
 </block>
   <text wx:if="{{axisTitle!=''}}" class='{{isCurent === true? "curentTitle" : "outTitle"}}'>{{axisTitle}}</text>
   <text class='{{isCurent === true? "curentTime" : "outTime"}}'>{{axisTime}}</text>
+  <text class='{{isCurent === true? "curentContent" : "outContent"}}'>{{axisContent}}</text>
 </view>
 
 </view>
