--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -2,10 +2,13 @@
   <swiper autoplay="true" interval="3000" circular="true" class="swipper-body">
     <!-- 广告位 -->
     <swiper-item class="swiper-img">
-      <image src="https://i.loli.net/2021/03/22/hDMZOdK9uzbrp71.jpg" mode="heightFix" />
+      <image src="http://wgl.kaifeng.gov.cn/data/upload/image/202104/2fb3cc402b2a177f80adace18ab7f307.png" mode="widthFix" />
     </swiper-item>
     <swiper-item class="swiper-img">
-      <image src="https://i.loli.net/2021/03/22/hDMZOdK9uzbrp71.jpg" mode="heightFix" />
+      <image src="https://gimg2.baidu.com/image_search/src=http%3A%2F%2Fimage.qqlyw.cn%2FAttachments%2Fjpeg%2F2017%2F08%2F04%2F5qafwjc1gem.jpeg&refer=http%3A%2F%2Fimage.qqlyw.cn&app=2002&size=f9999,10000&q=a80&n=0&g=0n&fmt=jpeg?sec=1621486388&t=614e9149d0fbfb4086ae0341d7727331" mode="widthFix" />
+    </swiper-item>
+    <swiper-item class="swiper-img">
+      <image src="https://gimg2.baidu.com/image_search/src=http%3A%2F%2Fyouimg1.c-ctrip.com%2Ftarget%2F10030s000000hih1tD666.jpg&refer=http%3A%2F%2Fyouimg1.c-ctrip.com&app=2002&size=f9999,10000&q=a80&n=0&g=0n&fmt=jpeg?sec=1621486444&t=60d33a62cadd43df0e5c516c8fb0f856" mode="widthFix" />
     </swiper-item>
   </swiper>
   <!-- 推荐内容 -->
@@ -17,39 +20,30 @@
       <view class="card">
         <!-- 放置图片 -->
         <view class="card-img-box">
-          <image src="https://www.hualigs.cn/image/6054993ec8e5d.jpg" class="card-img" mode="widthFix" />
+          <image src="https://ss1.bdstatic.com/70cFvXSh_Q1YnxGkpoWK1HF6hhy/it/u=2842258015,3745179964&fm=26&gp=0.jpg" class="card-img" mode="widthFix" />
         </view>
         <!-- 放置文字信息 -->
         <view class="card-info-box">
           <view>
-            <view class="card-info-title">标题信息</view>
-            <view class="card-info-content">内容内容内容内容内容内容内容内容内容</view>
+            <view class="card-info-title">4日3晚·清明上河园·东京极地公园·全家游</view>
+            <view class="card-info-star">推荐指数：<image class="card-star" src="./../../icon/星星.png" alt="" /><image class="card-star" src="./../../icon/星星.png" alt="" /><image class="card-star" src="./../../icon/星星.png" alt="" /><image class="card-star" src="./../../icon/星星.png" alt="" /></view>
+            <view class="card-info-content">精华景点全含，全方位穿越宋代街头；年画制作+小吃夜市</view>
+            <view class="card-info-budget">旅行预算：¥3000</view>
           </view>
         </view>
       </view>
       <view class="card">
         <!-- 放置图片 -->
         <view class="card-img-box">
-          <image src="https://www.hualigs.cn/image/6054993ec8e5d.jpg" class="card-img" mode="widthFix" />
+          <image src="https://ss1.bdstatic.com/70cFvXSh_Q1YnxGkpoWK1HF6hhy/it/u=1795326518,1227938201&fm=26&gp=0.jpg" class="card-img" mode="widthFix" />
         </view>
         <!-- 放置文字信息 -->
         <view class="card-info-box">
           <view>
-            <view class="card-info-title">标题信息</view>
-            <view class="card-info-content">内容内容内容内容内容内容内容内容内容</view>
-          </view>
-        </view>
-      </view>
-      <view class="card">
-        <!-- 放置图片 -->
-        <view class="card-img-box">
-          <image src="https://www.hualigs.cn/image/6054993ec8e5d.jpg" class="card-img" mode="widthFix" />
-        </view>
-        <!-- 放置文字信息 -->
-        <view class="card-info-box">
-          <view>
-            <view class="card-info-title">标题信息</view>
-            <view class="card-info-content">内容内容内容内容内容内容内容内容内容</view>
+            <view class="card-info-title">3日2晚·「东方迪士尼·清明上河园」+大相国寺+开封府</view>
+            <view class="card-info-star">推荐指数：<image class="card-star" src="./../../icon/星星.png" alt="" /><image class="card-star" src="./../../icon/星星.png" alt="" /><image class="card-star" src="./../../icon/星星.png" alt="" /><image class="card-star" src="./../../icon/星星.png" alt="" /></view>
+            <view class="card-info-content">步入历史·4星酒店·开启汴京穿越之旅 一朝步入画卷 一日梦回千年</view>
+            <view class="card-info-budget">旅行预算：¥2700</view>
           </view>
         </view>
       </view>
@@ -60,10 +54,10 @@
         <text>热门景点推荐</text>
         <text class="more-btn" bindtap="toAcctractionList">more></text>
       </view>
-      <view class="card" data-index="{{item._id}}" wx:for="{{hot_attraction}}" wx:key="index" bindtap="navigateToInfo">
+      <view class="card1" data-index="{{item.id}}" wx:for="{{hot_attraction}}" wx:key="index" bindtap="navigateToInfo">
         <!-- 放置图片 -->
         <view class="card-img-box">
-          <image src="{{item.images[0]}}" class="card-img" mode="widthFix" />
+          <image src="{{item.images}}" class="card-img" mode="widthFix" />
         </view>
         <!-- 放置文字信息 -->
         <view class="card-info-box">
