--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -29,7 +29,18 @@
   width: 90%;
   margin-left: 5%;
   margin-top: 20rpx;
-  height: 390rpx;
+  height: 450rpx;
+  background: #448AFF;
+  border-radius: 10rpx;
+  box-shadow: 5px 5px 5px #cdcfcf;
+  display: flex;
+}
+
+.card1 {
+  width: 90%;
+  margin-left: 5%;
+  margin-top: 20rpx;
+  height: 400rpx;
   background: #448AFF;
   border-radius: 10rpx;
   box-shadow: 5px 5px 5px #cdcfcf;
@@ -56,13 +67,23 @@
 }
 
 .card-info-title {
-  font-size: larger;
+  font-size: medium;
   color: #FFFFFF;
+}
+
+.card-star {
+  display: inline-block;
+  width: 40rpx;
+  height: 40rpx;
+}
+
+.card-info-star {
+  font-size: x-small;
 }
 
 .card-info-content {
   margin-top: 20rpx;
-  font-size: small;
+  font-size: x-small;
   color: #212121;
   display:-webkit-box;
   /* 表示几行后超出隐藏 */
@@ -74,6 +95,10 @@
   -webkit-box-orient:vertical;
   /*强制英文单词自动换行*/
   word-break:break-all;
+}
+
+.card-info-budget {
+  font-size: x-small;
 }
 
 .card-info-tips {
